Fixed speaker name getting cutoff

--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -6,4 +6,7 @@ page-details {
   .title {
     white-space: normal;
   }
+  .speaker {
+    white-space: normal;
+  }
 }
